--- a/page.html
+++ b/page.html
@@ -4,7 +4,7 @@
   .tg th{padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 </style>
 <br>
-<table id="user_table"class="display tg" style="text-align: center">
+<table id="user-table"class="display tg" style="text-align: center">
   <thead>
     <tr>
       <th>ID</th>
@@ -18,7 +18,7 @@
       <th>Calculation</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody id="user">
     {{range .Users}}
     <tr>
       <td>{{.ID}}</td>
@@ -40,5 +40,63 @@
   <b>Filter by Name:</b><br>
   <input type="text" name="name" value="">
   <br>
-  <input type="submit" value="Submit">
+  <input type="submit" value="Search" id="filter-user">
 </form>
+
+<!-- <div>
+  <table id="content">
+      <thead>
+          <tr>
+              <th>
+                  Id
+              </th>
+          </tr>
+      </thead>
+      <tbody id="emp"> // I should erase all the insides of tbody
+      </tbody>
+  </table>
+</div> -->
+
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script type="text/javascript">
+    $(function() {
+        $("#user-table").on("click", function() {
+            $.ajax({
+                url: 'localhost:8080/filter/',
+                type: "POST",
+                dataType: "json",
+                contentType: "application/json; charset=utf-8",
+                success: function(data) {
+                    var json = JSON.parse(data.d);
+                    $(json).each(function(index, item) {
+                        var questionId = json[index].id;
+                        var question = json[index].question;
+                        var course = json[index].course;
+                        for (var option = 0; option < json[index].answerEntities.length; option++) {
+                            var ans = json[index].answerEntities[option].ans;
+                            var ansId = json[index].answerEntities[option].id;
+                            var ansStatus = json[index].answerEntities[option].status;
+                            $('tbody#emp').append(
+                                '<tr><td>' +
+                                questionId +
+                                '</td><td>' +
+                                question +
+                                '</td><td>' +
+                                course +
+                                '</td><td>' +
+                                ansId +
+                                '</td><td>' +
+                                ans +
+                                '</td><td>' +
+                                ansStatus +
+                                '</td></tr>')
+                        }
+                    });
+                },
+                error: function(data) {
+                    alert(data.responseText);
+                }
+            });
+        });
+    });
+</script>
